[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Themes/BaseTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=1]
interpolation_mode = 2
colors = PoolColorArray( 1, 1, 1, 0.988142, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -2.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 100.0
margin_right = 20.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 3 )
text = "TANK GAME"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -149.5
margin_bottom = 149.5
grow_horizontal = 2
custom_constants/separation = 40

[node name="HostButton" type="Button" parent="Buttons"]
margin_right = 300.0
margin_bottom = 73.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource( 1 )
text = "HOST GAME"
flat = true
align = 0

[node name="JoinButton" type="Button" parent="Buttons"]
margin_top = 113.0
margin_right = 300.0
margin_bottom = 186.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource( 1 )
text = "JOIN GAME"
flat = true
align = 0

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 226.0
margin_right = 300.0
margin_bottom = 299.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource( 1 )
text = "QUIT"
flat = true
align = 0

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 177.0
margin_top = -200.0
margin_right = 855.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource( 2 )
expand = true

[node name="KickedPopup" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Server kicked you!"
dialog_text = "Lost connection to server!"

[connection signal="pressed" from="Buttons/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Buttons/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
